fix(chip): disabled styles in dark mode

--- a/src/components/chip/themes/dark/chip.indigo.scss
+++ b/src/components/chip/themes/dark/chip.indigo.scss
@@ -35,3 +35,8 @@ $theme: $indigo;
         box-shadow: 0 0 0 rem(3px) color(error, 900);
     }
 }
+
+:host([selected]) button[disabled],
+:host([variant='primary']) button[disabled] {
+    color: contrast-color(primary, 900, .2);
+}
