--- a/src/components/chip/themes/light/chip.indigo.scss
+++ b/src/components/chip/themes/light/chip.indigo.scss
@@ -34,3 +34,8 @@ $theme: $indigo;
         box-shadow: 0 0 0 rem(3px) color(error, 100);
     }
 }
+
+:host([selected]) button[disabled],
+:host([variant='primary']) button[disabled] {
+    color: contrast-color(primary, 900, .4);
+}
